--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,13 @@
 require: rubocop-rails
 
+inherit_from:
+  - node_modules/@prettier/plugin-ruby/rubocop.yml
+
 AllCops:
   NewCops: enable
+  Include:
+    - "**/*.rb"
   Exclude:
-    - 'bin/**/*'
-    - 'config/**/*.rb'
+    - "bin/**/*"
+    - "config/**/*.rb"
+    - "node_modules/**/*"
