--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -5,7 +5,7 @@
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
 name: "Ruby on Rails CI"
-on: [push]
+on: [ push ]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -51,6 +51,6 @@ jobs:
           node-version: 18.12.1
       - run: yarn install
       - name: Lint Ruby files
-        run: bin/rubocop --parallel
+        run: bin/rubocop --parallel --config .rubocop.yml
       - name: Check code style
         run: ./node_modules/.bin/prettier --plugin=@prettier/plugin-ruby --check '**/*.rb'
