--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,9 @@
 require: rubocop-rails
 
+inherit_mode:
+  merge:
+    - Exclude
+
 inherit_from:
   - node_modules/@prettier/plugin-ruby/rubocop.yml
 
