--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
-require: rubocop-rails
+require:
+  - rubocop-rails
+  - rubocop-rspec
 
 inherit_from:
   - node_modules/@prettier/plugin-ruby/rubocop.yml
